--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -5,7 +5,46 @@
     </div>
     <div class="contentdiv">
         <div class="pwrapper">
-            <p class="ptext">I have been </p>
+            <h2 class="heading">Work Experience</h2>
+            <p class="experience">
+                <i>SmashBurger, UT : </i>June 2018 - November 2018
+            </p>
+            <p class="experience">
+                <i>Arctic Circle, UT : </i>December 2018 - April 2019
+            </p>
+        </div>
+        <div class="pwrapper">
+            <h2 class="heading">Education</h2>
+            <p class="experience">
+                <i>Lone Peak HS : </i>August 2016 - May 2019
+            </p>
+            <p class="experience">
+                <i>Lone Peak Debate Team:</i>August 2016 - May 2017
+            </p>
+        </div>
+        <div class="pwrapper">
+            <h2 class="heading">Programming Experience</h2>
+            <p class="experience">
+                <i>MTECH Web programming and Development :</i>August 2018 - May 2019
+            </p>
+            <p class="experience">
+                <i>2nd place in Xactwares' 24 hour Coding Competition :</i> April 26th, 2019
+            </p>
+            <p class="experience">
+                <i>Code to Success :</i>May 2018 - August 2018
+            </p>
+            <p class="experience">
+                <i>Lone Peak HS Web Programming and Development :</i>August 2016 - December 2016
+            </p>
+            <p class="experience">
+                <i>Simply Coding HTML and JS course: </i> September 2015 - November 2015
+            </p>
+            <p class="experience">
+                <i>Simply Coding Java course :</i> December 2015
+            </p>
+            <p class="experience">
+                <i>Coder Dojo :</i> July 2014 - October 2015  
+            </p>
         </div>
     </div>
     <div class="footer">
