--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -20,6 +20,15 @@
                 I have taken up Music as well. I am very familiar with Fl studio and create music and sounds on the daily.
             </p>
         </div>
+        <!-- <div class="pwrapper">
+            <h2 class="heading">Why hire me?</h2>
+            <p class="ptext">
+                Whenever I work I hate wasting time, 
+                in order to feel accomplished I need to finish a task. 
+                I strive to find the most efficent way to write code, 
+                I try to teach myself efficent methods of programming, such as built in methods or even a certain 
+            </p>
+        </div> -->
     </div>
     <div class="footer">
         <div class="footelem">
