--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -12,16 +12,16 @@
     
 }
 .contentdiv{
-    height:900px;
     width:70%;
     background-color:#303030;
     padding-left:15%;
     padding-right:15%;
     padding-top: 2%;
+    padding-bottom: 2%;
 }
 
-.ptext{
-    font-size:15px;
+.experience{
+    font-size:20px;
     margin:5px;
     padding:0px;
     font-family: 'Montserrat', sans-serif;
@@ -34,8 +34,8 @@
     display:flex;
     justify-content: center;
     align-items: space-between;
-    flex-flow: row;
-
+    flex-flow: column;
+    border-radius:5px;
 }
 
 .aboutme{
@@ -66,4 +66,15 @@
     margin:5px;
     margin-right:25px;
     margin-left:25px;
+}
+
+.heading{
+    color: #F9B67E;
+    font-family: 'Montserrat', sans-serif;
+    margin:0;
+    padding:0;
+}
+
+a{
+    text-decoration: none;
 }
