--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,17 +5,43 @@
     </div>
     <div class="contentdiv">
         <div class="pwrapper">
-            <p class="ptext">horans11@gmail.com</p>
-            <p class="ptext">469-667-9233</p>
+        <h2 class="heading">Contact Me</h2>
+            <p class="experience">
+                horans11@gmail.com
+            </p>
+            <p class="experience">
+                (469)-667-9233
+            </p>
+        </div>
+        <div class="pwrapper">
+        <h2 class="heading">Other Links</h2>
+            <a href="https://www.instagram.com/berk.horn/?hl=af">
+                <p class="experience">
+                    Soundcloud
+                </p>
+            </a>
+            <a href="https://vsco.co/dberryfresh/images/">
+                <p class="experience">
+                    VSCO
+                </p>
+            </a>
+            <a href="https://soundcloud.com/user-373656667">
+                <p class="experience">
+                    Instagram
+                </p>
+            </a>
         </div>
     </div>
     <div class="footer">
+
         <div class="footelem">
-            <i class="fab fa-github icon"></i>
-            <i class="fab fa-reddit icon"></i>
-            <i class="fab fa-pinterest icon"></i>
-            <i class="fab fa-twitter icon"></i>
-            <i class="fab fa-linkedin-in icon"></i>
+            
+            <a href="https://www.reddit.com/submit"><i class="fab fa-reddit icon"></i></a>
+            <a href="https://twitter.com/berkley_horan"><i class="fab fa-twitter icon"></i></a>
+            <a href="https://github.com/berkleyhoran"><i class="fab fa-github icon"></i></a>
+            <a href="https://www.linkedin.com/in/berkley-horan-6b1a18169/"><i class="fab fa-linkedin-in icon"></i></a>
+            
         </div>
+        
     </div>
 </div>
