--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -12,12 +12,12 @@
     
 }
 .contentdiv{
-    height:900px;
     width:70%;
     background-color:#303030;
     padding-left:15%;
     padding-right:15%;
-    padding-top: 2%;
+    padding-top: 4%;
+    padding-bottom: 4%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -36,6 +36,7 @@
     justify-content: center;
     align-items: space-between;
     flex-flow: column;
+    border-radius:5px;
 
 }
 
