--- a/src/app/programming/programming.component.html
+++ b/src/app/programming/programming.component.html
@@ -14,11 +14,12 @@
     </div>
     <div class="footer">
         <div class="footelem">
-            <i class="fab fa-github icon"></i>
-            <i class="fab fa-reddit icon"></i>
-            <i class="fab fa-pinterest icon"></i>
-            <i class="fab fa-twitter icon"></i>
-            <i class="fab fa-linkedin-in icon"></i>
+            
+            <a href="https://www.reddit.com/submit"><i class="fab fa-reddit icon"></i></a>
+            <a href="https://twitter.com/berkley_horan"><i class="fab fa-twitter icon"></i></a>
+            <a href="https://github.com/berkleyhoran"><i class="fab fa-github icon"></i></a>
+            <a href="https://www.linkedin.com/in/berkley-horan-6b1a18169/"><i class="fab fa-linkedin-in icon"></i></a>
+            
         </div>
     </div>
 </div>
